--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-fastapi
-uvicorn
-langchain-groq
-langchain-community
-duckduckgo-search
-python-dotenv
-pydantic
-langchain-openai
-langchain
+fastapi==0.111.0
+uvicorn==0.30.0
+langchain==0.2.14
+langchain-groq==0.1.9
+langchain-community==0.2.12
+duckduckgo-search==6.1.0
+python-dotenv==1.0.1
+pydantic==2.8.2
+langchain-openai==0.1.23
